<resources>
    <string name="app_name">Logica</string>
    <string name="letter_a">A</string>
    <string name="letter_b">B</string>
    <string name="operator_and">\u2227</string>
    <string name="operator_or">\u2228</string>
    <string name="operator_negation">\u00AC</string>
    <string name="conjunction">Conjunction (AND)</string>
    <string name="conjunction_a_b">A \u2227 B</string>
    <string name="disjunctino">Disjunction (OR)</string>
    <string name="disjunction_a_b">A \u2228 B</string>
    <string name="symbol_true">T</string>
    <string name="symbol_false">F</string>
    <string name="success_text">Answers correct!</string>
    <string name="failed_text">Answers wrong!</string>
    <string name="button_submit">SUBMIT</string>
</resources>
